@startuml

title __CONTROLLER's Class Diagram__\n


    namespace om.example.demo {
      namespace controller {
        class com.example.demo.controller.BillController {
            + sendCSV()
            + sendJSON()
        }
      }
    }

  


    namespace om.example.demo {
      namespace controller {
        class com.example.demo.controller.ConcertController {
            + addConcert()
            + deleteConcert()
            + getAllUsers()
            + updateConcert()
        }
      }
    }

  


    namespace om.example.demo {
      namespace controller {
        class com.example.demo.controller.TicketController {
            + addTicket()
            + deleteTicket()
            + editTicket()
            + getAllTickets()
        }
      }
    }

  


    namespace om.example.demo {
      namespace controller {
        class com.example.demo.controller.UserController {
            + addUser()
            + deleteUser()
            + getAllUsers()
            + updateUser()
        }
      }
    }

  

  com.example.demo.controller.BillController o-- com.example.demo.factorymethod.BillFactory : billFactory
  com.example.demo.controller.ConcertController o-- com.example.demo.service.ConcertService : concertService
  com.example.demo.controller.TicketController o-- com.example.demo.service.ConcertService : concertService
  com.example.demo.controller.TicketController o-- com.example.demo.service.TicketService : ticketService
  com.example.demo.controller.UserController o-- com.example.demo.service.UserService : userService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
